# Game-project-part-3

./: .gitignore  Aerold Parcon - DUNGEON_txt C game program final report.docx  CMakeLists.txt  README.md  Standard Declaration of Student Authorship -HWU (1) (1).docx  build_cmake.bat  combat.c  combat.h  compile.bat  dialogue.c  dialogue.h  entity.c  entity.h  game.h  getchTest.c  initiative.c  initiative.h  input.c  input.h  item.c  item.h  linked_list.c  main.c  make.bat  map.h  menus.c  menus.h  monster.c  pathfinding.c  pathfinding.h  player.c  player.h  room.c  room.h  run.bat  test_ncurses.bat  util.c  util.h
assets/dialogue/: dungeon_enter.txt
assets/entities/: goblin.txt  player_default.txt  template_2.txt
assets/rooms/: goblin_room_5.txt  left_hallway_2.txt  maze_room.txt  maze_room_6.txt  right_hallway_1.txt  room_2.txt  shadowcast_room.txt  starter_room.txt  starter_room_0.txt
dialogue/: dungeon_enter.txt  monsters_still_in_room.txt
dialogue/items/: equip_armour.txt  equip_weapon.txt  unequip_armour.txt  unequip_weapon.txt
entities/: bat.txt  goblin.txt  template.txt
items/consumables/: small_potion.txt
items/weapons/: rusty_sword.txt
rooms/: maze_room.txt  starter_room.txt
src/: main.c  ncurse_attempt.c
src/core/: game.h
src/dialogue/: dialogue.c  dialogue.h
src/entity/: entity.c  entity.h  entity_runner.c  entity_runner.h  entity_stats.c  entity_stats.h  monster.c  monster.h  pathfinding.c  pathfinding.h  player.c  player.h
src/gameplay/: combat.c  combat.h  initiative.c  initiative.h  menus.c  menus.h
src/item/: inventory.c  (+3 more)
(+22 files in other folders)
